sample-web-server/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web-external
  labels:
    app: hello-web
spec:
  type: LoadBalancer
  selector:
    app: hello-web
  ports:
  - port: 80
    targetPort: 8080
