sample-web-server/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-web-ingress
  labels:
    app: hello-web
spec:
  backend:
    serviceName: hello-web-internal
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-web-internal
  labels:
    app: hello-web
spec:
  type: NodePort
  selector:
    app: hello-web
  ports:
  - port: 8080
